Add contact info to footer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 My Portfolio</p>
+        <p>&copy; <p>&copy; 2025 My Portfolio | Contact: myemail@example.com</p></p>
     </footer>
 </body>
 </html>
